# solana-private-channels

./: .env.devnet  .env.example  .env.local  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.devnet.yml  docker-compose.yml  prometheus.yml  versions.env
auth/: Cargo.toml  Makefile  README.md
auth/src/: config.rs  db.rs  main.rs  models.rs
bench-tps/: .env.sample  .env.sample.devnet  BOTTLENECK_ANALYSIS.md  Cargo.toml  README.md
bench-tps/scripts/: run.sh
bench-tps/src/: instruction_util.rs  load_deposit.rs  load_withdraw.rs  main.rs  setup_deposit.rs  setup_withdraw.rs
contra-swap-program/clients/rust/: Cargo.toml
contra-swap-program/clients/rust/src/: lib.rs
contra-swap-program/program/: Cargo.toml  build.rs
contra-swap-program/program/src/: discriminator.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs
contra-swap-program/program/src/processor/: cancel_dvp.rs  create_dvp.rs  fund_dvp.rs  mod.rs  reclaim_dvp.rs  reject_dvp.rs  settle_dvp.rs
contra-swap-program/program/src/processor/shared/: account_check.rs  mod.rs  pda_utils.rs  token_utils.rs  utils.rs
contra-swap-program/program/src/state/: swap_dvp.rs
contra-swap-program/tests/integration-tests/: Cargo.toml
contra-swap-program/tests/integration-tests/src/: lib.rs  state_utils.rs  utils.rs
contra-swap-program/tests/integration-tests/src/test_cancel_dvp/: mod.rs
contra-swap-program/tests/integration-tests/src/test_create_dvp/: mod.rs
contra-swap-program/tests/integration-tests/src/test_fund_dvp/: mod.rs
contra-swap-program/tests/integration-tests/src/test_reclaim_dvp/: mod.rs
contra-swap-program/tests/integration-tests/src/test_reject_dvp/: mod.rs
contra-swap-program/tests/transfer-hook-fixture/: Cargo.toml
contra-swap-program/tests/transfer-hook-fixture/src/: lib.rs
core/: Cargo.toml
core/src/: client.rs  health.rs  processor.rs  stage_metrics.rs  test_helpers.rs  transactions.rs
core/src/accounts/: address_index_repair.rs  address_index_watermark.rs  bob.rs  mod.rs  postgres.rs  precompiles.rs  traits.rs  truncate.rs  types.rs  utils.rs  write_batch.rs
core/src/nodes/: node.rs
core/src/rpc/: error.rs  get_account_info_impl.rs  get_latest_blockhash_impl.rs  mod.rs  rpc_impl.rs  send_transaction_impl.rs  simulate_transaction_impl.rs
core/src/stages/: address_index_writer.rs  dedup.rs  execution.rs  mod.rs  sequencer.rs  settle.rs  sigverify.rs
core/src/vm/: admin.rs  clock.rs  gasless_callback.rs  mod.rs
dvp-swap-program/tests/integration-tests/: Cargo.toml
dvp-swap-program/tests/integration-tests/src/: state_utils.rs  utils.rs
dvp-swap-program/tests/transfer-hook-fixture/: Cargo.toml
indexer/: Cargo.toml  Makefile
indexer/config/: example-indexer.toml  example-operator.toml
indexer/config/local/: indexer-private-channel.toml  indexer-solana.toml
indexer/src/: channel_utils.rs  config.rs  metrics.rs  shutdown_utils.rs  test_utils.rs
indexer/src/error/: indexer.rs  operator.rs  transaction.rs
indexer/src/indexer/: backfill.rs  checkpoint.rs  indexer.rs  reconciliation.rs  resync.rs  transaction_processor.rs
indexer/src/indexer/datasource/common/: types.rs
indexer/src/operator/: constants.rs  db_transaction_writer.rs  escrow_sweep.rs  fetcher.rs  mod.rs  operator.rs  processor.rs  reconciliation.rs  recovery.rs
indexer/src/operator/sender/: mint.rs  mod.rs  proof.rs  remint.rs  state.rs  transaction.rs  types.rs
indexer/src/operator/utils/: account_util.rs  instruction_util.rs  mint_util.rs  rpc_util.rs  signer_util.rs  transaction_util.rs
indexer/src/storage/common/: amount.rs  mod.rs  models.rs  storage.rs
indexer/src/storage/postgres/: db.rs
indexer/tests/: postgres_db_test.rs  reconciliation_db_test.rs  reconciliation_e2e_test.rs  remint_e2e_test.rs  runbook_drills.rs
integration/: Cargo.toml  Makefile
integration/tests/: setup.rs
integration/tests/indexer/: db_migration_race.rs  deposit_allowlist_e2e.rs  gap_detection.rs  harness_sanity.rs  integration.rs  jit_mint_helper.rs  mint_idempotency.rs  multi_instruction_pipeline.rs  operator_lifecycle.rs  parked_withdrawal_recovery.rs  parser_malformation.rs  pausable_mint.rs  pending_remint_storage.rs  permanent_delegate_mint.rs  processor_quarantine.rs  reconciliation.rs  reconciliation_e2e.rs  remint_flow.rs  remint_recovery.rs  resync.rs  rpc_startup_handoff.rs  sender_fixtures.rs  sender_max_retries.rs  sender_mint_idempotency.rs  sender_mint_signature_failures.rs  sender_mint_validator_encodings.rs  sender_onchain_error_arms.rs  sender_poll_rpc_error.rs  sender_rotation_retry.rs  sender_singleton_lock.rs  setup.rs  state_recovery_malformed.rs  stuck_processing_recovery.rs  withdrawal_null_nonce.rs  yellowstone_inner_and_unknown.rs  yellowstone_reconnect_gap.rs  yellowstone_startup_gap.rs  yellowstone_wiring.rs
integration/tests/indexer/helpers/: db.rs  transaction_executor.rs  verification.rs
integration/tests/private-channel/: integration.rs  test_ingress_backpressure.rs  test_node_config_validation.rs  test_sequencer_zero_deadline.rs
integration/tests/private-channel/rpc/: mod.rs  test_blockhash_expiry_after_admission.rs  test_dedup_persistence.rs  test_precompile_accounts.rs  test_redis_cache_path.rs  test_simulate_transaction_guards.rs  test_spl_token.rs  test_swap.rs  utils.rs
private-channel-escrow-program/clients/rust/: Cargo.toml
private-channel-escrow-program/tests/integration-tests/: Cargo.toml
private-channel-escrow-program/tests/integration-tests/src/: assertions.rs  state_utils.rs  utils.rs
private-channel-withdraw-program/clients/rust/: Cargo.toml
private-channel-withdraw-program/tests/integration-tests/: Cargo.toml
private-channel-withdraw-program/tests/integration-tests/src/: state_utils.rs  test_withdraw_funds.rs  test_withdraw_funds_edge_cases.rs  utils.rs
scripts/devnet/: Cargo.toml  README.md
scripts/devnet/config/: indexer-private-channel.toml  indexer-solana.toml
scripts/devnet/src/: lib.rs
test_utils/: Cargo.toml
test_utils/src/: indexer_helper.rs  lib.rs  mint_helper.rs  operator_helper.rs
(+162 files in other folders)
