[workspace]

members = [
    "auth",
    "private-channel-escrow-program/program",
    "private-channel-escrow-program/tests/integration-tests",
    "private-channel-escrow-program/clients/rust",
    "private-channel-withdraw-program/program",
    "private-channel-withdraw-program/tests/integration-tests",
    "private-channel-withdraw-program/clients/rust",
    "core",
    "gateway",
    "indexer",
    "metrics",
    "integration",
    "test_utils",
    "scripts/devnet",
    "bench-tps",
]

resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5"
async-channel = "2"
base64 = "0.21"
bincode = "1.3.3"
borsh = "1.5.5"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
const-crypto = "0.3.0"
enum_dispatch = "0.3.13"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2", "webpki-roots", "ring"] }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
jsonwebtoken = "9"
litesvm = "=0.7.0"
num-derive = "0.4.1"
once_cell = "1.20"
num-traits = "0.2.19"
pinocchio = "^0.10.1"
pinocchio-associated-token-account = "^0.3.0"
pinocchio-log = "^0.5.1"
pinocchio-system = "^0.5.0"
pinocchio-token = "0.5.0"
pinocchio-token-2022 = "^0.2.0"
prometheus = "0.14"
rand = "0.7.3"
redis = { version = "0.27", features = [
    "tokio-comp",
    "connection-manager",
    "json",
] }
reqwest = { version = "0.11", features = ["json"] }
rocksdb = "0.23"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
codama = "^0.7.2"
solana-account = "3.0.0"
solana-account-info = "3.0.0"
solana-account-decoder = "2.3.10"
solana-account-decoder-client-types = "2.3.10"
solana-address = "1.0.0"
solana-bpf-loader-program = "2.3.0"
solana-client = "3.0.0"
solana-compute-budget = "2.3.0"
solana-epoch-info = "2.2.1"
solana-epoch-schedule = "2.2.1"
solana-fee-calculator = "2.2.1"
solana-cpi = "3.0.0"
solana-hash = "2.3.0"
solana-instruction = "3.0.0"
solana-loader-v3-interface = "5.0.0"
solana-logger = "2.3.0"
solana-program = "3.0.0"
solana-program-entrypoint = "3.1.0"
solana-program-error = "3.0.0"
solana-program-pack = "3.0.0"
solana-program-runtime = "2.3.0"
solana-pubkey = "3.0.0"
solana-rent-collector = "2.3.0"
solana-rpc = "3.0"
solana-rpc-client-api = "2.3.10"
solana-rpc-client-types = "2.3.10"
solana-runtime-transaction = "2.3.10"
solana-sdk = "2.3.0"
solana-sdk-ids = "2.2.1"
solana-svm = { version = "2.3.0", features = ["dev-context-only-utils"] }
solana-svm-callback = "2.3.0"
solana-svm-feature-set = "2.3.0"
solana-svm-rent-collector = "2.3.0"
solana-svm-transaction = "2.3.0"
solana-commitment-config = "2.2"
solana-system-interface = "1.0"
solana-system-program = "2.3.0"
# 3.1.13 is the target binary (see versions.env). However crates.io's latest publish
# is 3.1.12. Use 3.1.12 — wire-compatible with the 3.1.13 CLI within a patch.
solana-test-validator = "3.1.12"
solana-transaction-error = "2.2.1"
solana-transaction-status = "2.3.0"
solana-transaction-status-client-types = "2.3.0"
solana-timings = "2.3.0"
spl-associated-token-account = "7.0.0"
spl-memo = "6.0.0"
spl-token = "8.0.0"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tempfile = "3.14"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres", "redis"] }
thiserror = "2.0.17"
tokio = { version = ">=1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5.7"
wiremock = "0.6"
uuid = { version = "1", features = ["v4"] }
# YELLOWSTONE_TAG=v12.3.0+solana.3.1.13 is the geyser *binary* tag from the
# upstream monorepo; the `+solana.3.1.13` is build metadata that pins the
# Solana crates it was compiled against. The client/proto crates on crates.io
# were not re-published for 12.3 (next published version is 13.0), so ~12.2
# is the correct client pin against a 12.3 server — the proto surface is
# unchanged between the two.
yellowstone-grpc-client = "~12.2"
yellowstone-grpc-proto = "~12.2"
private-channel-core = { path = "core" }
private-channel-metrics = { path = "metrics" }
private-channel-escrow-program-client = { path = "private-channel-escrow-program/clients/rust", features = [
    "fetch",
] }
private-channel-withdraw-program-client = { path = "private-channel-withdraw-program/clients/rust", features = [
    "fetch",
] }
