[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "private_channel_auth"
path = "src/lib.rs"

[[bin]]
name = "auth"
path = "src/main.rs"

# Named explicitly (not the inferred "admin") so it doesn't collide with
# core/src/bin/admin.rs, which also produces an "admin" binary. The collision
# previously meant this admin tool was never the one shipped in the image.
[[bin]]
name = "auth-admin"
path = "src/bin/admin.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
clap = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
solana-sdk = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
