[package]
name = "devnet-scripts"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
private-channel-escrow-program-client.workspace = true
private-channel-withdraw-program-client.workspace = true
solana-client = "2.3.10"
solana-sdk.workspace = true
solana-system-interface.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
# Generated builders speak solana_address::Address / solana_instruction v3.x;
# we convert at the boundary in `lib.rs`.
solana-address = "2"
solana-instruction = "3"
