[package]
name = "tests-contra-swap-program"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
litesvm = "=0.7.0"
contra-swap-program-client = { workspace = true, features = ["fetch"] }
solana-sdk = "2.3.1"
solana-program = "2.3.0"
spl-token = "6.0.0"
spl-associated-token-account = { version = "4.0.0", features = [
    "no-entrypoint",
] }
solana-program-pack = "2.2.1"
