[package]
name = "private-channel-escrow-program-client"
version = "0.0.1"
edition = "2021"
description = "Rust client for the PrivateChannel Escrow Program"
license = "MIT"
repository = "https://github.com/solana-foundation/solana-private-channels"

[dependencies]
borsh = { workspace = true }
solana-account-info = "2.2.1"
solana-pubkey = "2.2.1"
solana-instruction = "2.2.1"
solana-cpi = "2.2.1"
num-derive = { workspace = true }
num-traits = { workspace = true }

solana-client = { version = "2.2.1", optional = true }
solana-account = { version = "2.2.1", optional = true }
solana-program-error = "2.2.1"
thiserror = { workspace = true }

[features]
default = []
fetch = ["solana-client", "solana-account"]

[package.metadata.cargo-machete]
ignored = ["num-traits"]
