[package]
name = "tests-private-channel-escrow-program"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
const-crypto = { workspace = true }
litesvm = "=0.7.0"
private-channel-escrow-program-client = { workspace = true, features = ["fetch"] }
# Use LiteSVM compatible versions instead of workspace versions
solana-sdk = "2.3.1"
solana-program = "2.3.0"
spl-token = "6.0.0"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-pod = "0.5.1"
spl-associated-token-account = { version = "4.0.0", features = [
    "no-entrypoint",
] }
solana-program-pack = "2.2.1"
