[package]
name = "private-channel-withdraw-program-client"
version = "0.0.1"
edition = "2021"
description = "Rust client for the PrivateChannel Withdraw Program"
license = "MIT"
repository = "https://github.com/solana-foundation/solana-private-channels"

[dependencies]
borsh = { workspace = true }
solana-address = { workspace = true }
solana-account-info = { workspace = true }
solana-instruction = { workspace = true }
solana-cpi = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

solana-rpc-client = { workspace = true, optional = true }
solana-account = { workspace = true, optional = true }
solana-program-error = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
fetch = ["solana-rpc-client", "solana-account"]

[package.metadata.cargo-machete]
ignored = ["num-traits"]
